--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matt Site</title>
     <link rel="stylesheet" href="style/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="body">
@@ -26,6 +27,17 @@
                         <li><a href="#"><img src="images/Facebook Messenger.png" alt="" srcset=""></a></li>
                         <li><a href="#"><img src="images/WhatsApp.png" alt="" srcset=""></a></li>
                     </nav>
+                </div>
+            </div>
+            <div class="header-content">
+                <div class="header-content-left">
+                    <h1 class="text-top">Let's <b>Connect</b></h1>
+                    <h1 class="text-bottom">BRAND PROMOTION</h1>
+                </div>
+                <div class="header-content-right">
+                    <div class="image-right">
+                        <img src="images/heading_content_right.png" alt="" srcset="">
+                    </div>
                 </div>
             </div>
         </div>
