--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div class="header-content-left">
                     <h1 class="text-top">Let's <b>Connect</b></h1>
                     <h1 class="text-bottom">BRAND PROMOTION</h1>
+                    <a href="" class="my-project-button">My Projects <span><img src="images/Right Arrow.png" alt="" srcset=""></span></a>
                 </div>
                 <div class="header-content-right">
                     <div class="image-right">
