--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 </div>
                 <div class="menu-text">
                     <nav class="nav">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="#services">SERVICES</a></li>
                         <li><a href="#">PORTFOLIO</a></li>
                     </nav>
                 </div>
@@ -40,6 +40,19 @@
                         <img src="images/heading_content_right.png" alt="" srcset="">
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- Services Part -->
+        <div class="services_oferred_header" id="services">
+            <h1 class="serviceH1">SERVICES OFFERED</h1>
+        </div>
+        <div class="services">
+            <div class="services_left">
+                <img src="images/service_right.png" alt="">
+            </div>
+            <div class="services_right">
+                <img src="images/Service_left.png" alt="">
             </div>
         </div>
     </div>
